--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,4 +4,6 @@ layout: default
 
 <h1 class="post-title">{{ page.title }}</h1>
 <p class="post-date">{{ page.date | date_to_string: "ordinal", "US"}}</p>
+<div class="post-body">
 {{ content }}
+</div>
