--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,6 @@
 <footer id="footer">
   <p>
     <a href="https://github.com/Who23">github</a>
+    <a href="https://twitter.com/Who3">twitter</a>
   </p>
 </footer>
